# accelerate-utility

./: .gitignore  accelerate-utility.cabal  stack.yaml
src/Data/Array/Accelerate/Utility/: Arrange.hs  Loop.hs  Ord.hs  Shape.hs  Sliced.hs  Sliced1.hs
src/Data/Array/Accelerate/Utility/Lift/: Acc.hs  Exp.hs  Run.hs
