Cabal-Version:    2.2
Name:             accelerate-utility
Version:          1.0.0.1
License:          BSD-3-Clause
License-File:     LICENSE
Author:           Henning Thielemann <haskell@henning-thielemann.de>
Maintainer:       Henning Thielemann <haskell@henning-thielemann.de>
Homepage:         http://hub.darcs.net/thielema/accelerate-utility/
Category:         Parallelism
Synopsis:         Utility functions for the Accelerate framework
Description:
  Several utility functions on top of the Accelerate framework.
  The functions simplify working with indices and lifting and unlifting.
Tested-With:      GHC==8.4.3
Build-Type:       Simple

Source-Repository this
  Tag:         1.0.0.1
  Type:        darcs
  Location:    http://hub.darcs.net/thielema/accelerate-utility/

Source-Repository head
  Type:        darcs
  Location:    http://hub.darcs.net/thielema/accelerate-utility/

Library
  Build-Depends:
    accelerate >=1.0 && <1.3,
    utility-ht >=0.0.8 && <0.1,
    base >=4.5 && <5

  GHC-Options:      -Wall -fwarn-missing-import-lists
  Hs-Source-Dirs:   src
  Default-Language: Haskell98
  Exposed-Modules:
    Data.Array.Accelerate.Utility.Lift.Acc
    Data.Array.Accelerate.Utility.Lift.Exp
    Data.Array.Accelerate.Utility.Lift.Run
    Data.Array.Accelerate.Utility.Loop
    Data.Array.Accelerate.Utility.Arrange
    Data.Array.Accelerate.Utility.Sliced
    Data.Array.Accelerate.Utility.Sliced1
    Data.Array.Accelerate.Utility.Ord
    Data.Array.Accelerate.Utility.Shape
